--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "alloyfinger": "^0.1.16",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
